Added fixes for FileBackedTaskManager and automated tests